--- a/JenkinsFile
+++ b/JenkinsFile
@@ -206,12 +206,12 @@ pipeline {
     }
 }
 
-    post
-    {
-        always
-        {
-            junit 'jest-results/junit.xml'
-            publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, icon: '', keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'PlayWright HTML Report', reportTitles: '', useWrapperFileDirectly: true])
-        }
-    }
-}
+//     post
+//     {
+//         always
+//         {
+//             junit 'jest-results/junit.xml'
+//             publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, icon: '', keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'PlayWright HTML Report', reportTitles: '', useWrapperFileDirectly: true])
+//         }
+//     }
+// }
