--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,36 +1,26 @@
 pipeline {
     agent any
 
-    environment
-    {
-        NETLIFY_SITE_ID='dd4e9d15-e74e-4c5e-a45a-da5f9a024f29'
-        NETLIFY_AUTH_TOKEN=credentials('netlify-token')
+    environment{
+        NETLIFY_SITE_ID = 'dd4e9d15-e74e-4c5e-a45a-da5f9a024f29'
+        NETLIFY_AUTH_TOKEN = credentials('netlify-token')
     }
+
     stages {
-        // stage('Hello') {
-        //     steps {
-        //         echo 'Hello World'
-        //     }
-        // }
+        stage('Hello') {
+            steps {
+                echo 'Hello World'
+            }
+        }
 
-
-        //this is a comment
-
-        /*
-        line1
-        line2
-        */
-
-        stage('Build')
-        {
+         stage('Build') {
             agent{
-                docker
-                {
+                docker{
                     image 'node:18-alpine'
                     reuseNode true
                 }
             }
-            steps{
+            steps {
                 sh '''
                     ls -la
                     node --version
@@ -41,168 +31,47 @@ pipeline {
                 '''
             }
         }
-        
 
-        // stage('Test')
-        // {
-        //     agent{
-        //         docker 
-        //         {
-        //             image 'node:18-alpine'
-        //             reuseNode true
-        //         }
-        //     }
-        //     steps{
-        //         sh '''
-        //             test stage
-        //             #test -f build/index.html
-        //             npm test
-        //             '''
-        //     }
-        // }
-
-        stage('E2E')
-        {
+        stage('Test'){
             agent{
-                docker 
-                {
-                    image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
-                    reuseNode true
-                }
-            }
-            steps{
-                sh '''
-                   npm install serve
-                   node_modules/.bin/serve -s build &
-                   sleep 10
-                   npx playwright install
-                   REPORT_DIR=playwright-report-prod npx playwright test
-
-                   '''
-            }
-
-            post {
-            always {
-            archiveArtifacts artifacts: 'playwright-report-prod/**', allowEmptyArchive: true
-            publishHTML(target: [
-                reportDir: 'playwright-report-prod',
-                reportFiles: 'index.html',
-                reportName: 'Playwright Report (Prod E2E)',
-                keepAll: true
-            ])
-            }
-        }
-        }
-
-        stage("Tests"){
-            parallel {
-                stage('Unit Test')
-                {
-                    agent{
-                        docker 
-                        {
-                            image 'node:18-alpine'
-                            reuseNode true
-                        }
-                    }
-                    steps{
-                        sh '''
-                            test stage
-                            #test -f build/index.html
-                            npm test
-                            '''
-                    }
-                    post{
-                        always
-                        {
-                            junit 'jest-results/junit.xml'
-                        }
-                        }
-                }
-
-                stage('E2E')
-                {
-                    agent{
-                        docker 
-                        {
-                            image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
-                            reuseNode true
-                        }
-                    }
-                    steps{
-                        sh '''
-                        npm install serve
-                        node_modules/.bin/serve -s build &
-                        sleep 10
-                        npx playwright test --reporter=html
-                        '''
-                    }
-                    post{
-                        always
-                        {
-                            publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, icon: '', keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'PlayWright HTML Report', reportTitles: '', useWrapperFileDirectly: true])
-                        }
-                        }
-                }
-            }
-        }
-
-        stage('Deploys')
-        {
-            agent{
-                docker 
-                {
+                docker{
                     image 'node:18-alpine'
                     reuseNode true
                 }
             }
+            
             steps{
                 sh '''
-                    echo "deploy stage"
-                    #npm install netlify-cli
-                    npm install netlify-cli@20.1.1
-                    node_modules/.bin/netlify --version
-                    echo "Deploying to site id: $NETLIFY_SITE_ID"
-                    node_modules/.bin/netlify status
-                    node_modules/.bin/netlify deploy --dir=build --prod
-                    echo "done!..."
-                    '''
+                    test stage
+                    test -f build/index.html
+                    npm test
+                '''
             }
         }
 
-        stage('Prod E2E') {
-            agent {
-                docker {
-                image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
+        stage('Deploy') {
+            agent{
+                docker{
+                    image 'node:18-alpine'
+                    reuseNode true
                 }
             }
             steps {
                 sh '''
-                    npx playwright install
-                    REPORT_DIR=playwright-report-prod npx playwright test
+                    npm install netlify-cli
+                    node_modules/.bin/netlify --version
+                    echo "Deploying to site id: $NETLIFY_SITE_ID"
+                    node_modules/.bin/netlify status
+                    node_modules/.bin/netlify deploy --dir=build --prod
                 '''
             }
-            post {
-                always {
-                archiveArtifacts artifacts: 'playwright-report-prod/**', allowEmptyArchive: true
-                publishHTML(target: [
-                    reportDir: 'playwright-report-prod',
-                    reportFiles: 'index.html',
-                    reportName: 'Playwright Report (Prod E2E)',
-                    keepAll: true
-                ])
-                }
-            }
-            }
+        }
+    }
+
+    post{
+        always{
+            junit 'test-results/junit.xml'
+        }
     }
 }
 
-//     post
-//     {
-//         always
-//         {
-//             junit 'jest-results/junit.xml'
-//             publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, icon: '', keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'PlayWright HTML Report', reportTitles: '', useWrapperFileDirectly: true])
-//         }
-//     }
-// }
