--- a/JenkinsFile
+++ b/JenkinsFile
@@ -58,11 +58,12 @@ pipeline {
             }
             steps {
                 sh '''
-                    npm install netlify-cli
-                    node_modules/.bin/netlify --version
+                    #npm install netlify-cli
+                    npm install netlify-cli@20.1.1
+                    ./node_modules/.bin/netlify --version
                     echo "Deploying to site id: $NETLIFY_SITE_ID"
-                    node_modules/.bin/netlify status
-                    node_modules/.bin/netlify deploy --dir=build --prod
+                    ./node_modules/.bin/netlify status
+                    ./node_modules/.bin/netlify deploy --dir=build --prod
                 '''
             }
         }
