added jenkins file

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,21 +1,12 @@
 pipeline {
     agent any
 
-    environment{
-        NETLIFY_SITE_ID = 'dd4e9d15-e74e-4c5e-a45a-da5f9a024f29'
-        NETLIFY_AUTH_TOKEN = credentials('netlify-token')
-    }
-
     stages {
-        stage('Hello') {
-            steps {
-                echo 'Hello World'
-            }
-        }
+        /*
 
-         stage('Build') {
-            agent{
-                docker{
+        stage('Build') {
+            agent {
+                docker {
                     image 'node:18-alpine'
                     reuseNode true
                 }
@@ -31,48 +22,47 @@ pipeline {
                 '''
             }
         }
+        */
 
-        stage('Test'){
-            agent{
-                docker{
+        stage('Test') {
+            agent {
+                docker {
                     image 'node:18-alpine'
                     reuseNode true
                 }
             }
-            
-            steps{
+
+            steps {
                 sh '''
-                    test stage
-                    test -f build/index.html
+                    #test -f build/index.html
                     npm test
                 '''
             }
         }
 
-        stage('Deploy') {
-            agent{
-                docker{
-                    image 'node:18-alpine'
+        stage('E2E') {
+            agent {
+                docker {
+                    image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
                     reuseNode true
                 }
             }
+
             steps {
                 sh '''
-                    #npm install netlify-cli
-                    npm install netlify-cli@20.1.1
-                    ./node_modules/.bin/netlify --version
-                    echo "Deploying to site id: $NETLIFY_SITE_ID"
-                    ./node_modules/.bin/netlify status
-                    ./node_modules/.bin/netlify deploy --dir=build --prod
+                    npm install serve
+                    node_modules/.bin/serve -s build &
+                    sleep 10
+                    npx playwright test --reporter=html
                 '''
             }
         }
     }
 
-    post{
-        always{
+    post {
+        always {
             junit 'jest-results/junit.xml'
+            publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'Playwright HTML Report', reportTitles: '', useWrapperFileDirectly: true])
         }
     }
 }
-
