--- a/JenkinsFile
+++ b/JenkinsFile
@@ -98,9 +98,9 @@ pipeline {
         stage('Approval')
         {
             steps{
-                timeout(time: 15, unit: 'MINUTES') {
+                // timeout(time: 15, unit: 'MINUTES') {
                     input message: 'Do you wish to deploy to production?', ok: 'Yes, I am sure!'
-                }
+                // }
             }
         }
 
