--- a/JenkinsFile
+++ b/JenkinsFile
@@ -109,7 +109,7 @@ pipeline {
             }
 
             environment {
-                CI_ENVIRONMENT_URL = '${env.staging_url}'
+                CI_ENVIRONMENT_URL = "${env.staging_url}"
             }
 
             steps {
