--- a/JenkinsFile
+++ b/JenkinsFile
@@ -49,133 +49,135 @@ pipeline {
                         }
                     }
                 }
-
-                stage('E2E') {
-                    agent {
-                        docker {
-                            image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
-                            reuseNode true
-                        }
-                    }
-
-                    steps {
-                        sh '''
-                            npm install serve
-                            node_modules/.bin/serve -s build &
-                            sleep 10
-                            npx playwright test  --reporter=html
-                        '''
-                    }
-
-                    post {
-                        always {
-                            publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'Playwright Local', reportTitles: '', useWrapperFileDirectly: true])
-                        }
-                    }
-                }
             }
         }
 
-        stage('Deploy Staging') {
-            agent {
-                docker {
-                    image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
-                    reuseNode true
-                }
-            }
+//                 stage('E2E') {
+//                     agent {
+//                         docker {
+//                             image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
+//                             reuseNode true
+//                         }
+//                     }
 
-             steps {
-                sh '''
-                    npm install netlify-cli@20.1.1 node-jq
-                    node_modules/.bin/netlify --version
-                    echo "Deploying to staging. Site ID: $NETLIFY_SITE_ID"
-                    node_modules/.bin/netlify status
-                    node_modules/.bin/netlify deploy --dir=build --json > deploy-output.json
-                    node_modules/.bin/node-jq -r '.deploy_url' deploy-output.json
-                '''
+//                     steps {
+//                         sh '''
+//                             npm install serve
+//                             node_modules/.bin/serve -s build &
+//                             sleep 10
+//                             npx playwright test  --reporter=html
+//                         '''
+//                     }
 
-                script{
-                    env.staging_url=sh(script:"node_modules/.bin/node-jq -r '.deploy_url' deploy-output.json", returnStdout:true)
-                }
-            }
-        }
+//                     // post {
+//                     //     always {
+//                     //         publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'Playwright Local', reportTitles: '', useWrapperFileDirectly: true])
+//                     //     }
+//                     // }
+//                 }
+//             }
+//         }
 
-         stage('Staging E2E') {
-            agent {
-                docker {
-                    image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
-                    reuseNode true
-                }
-            }
+//         stage('Deploy Staging') {
+//             agent {
+//                 docker {
+//                     image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
+//                     reuseNode true
+//                 }
+//             }
 
-            environment {
-                CI_ENVIRONMENT_URL = "${env.staging_url}"
-            }
+//              steps {
+//                 sh '''
+//                     npm install netlify-cli@20.1.1 node-jq
+//                     node_modules/.bin/netlify --version
+//                     echo "Deploying to staging. Site ID: $NETLIFY_SITE_ID"
+//                     node_modules/.bin/netlify status
+//                     node_modules/.bin/netlify deploy --dir=build --json > deploy-output.json
+//                     node_modules/.bin/node-jq -r '.deploy_url' deploy-output.json
+//                 '''
 
-            steps {
-                sh '''
-                    npx playwright test  --reporter=html
-                '''
-            }
+//                 script{
+//                     env.staging_url=sh(script:"node_modules/.bin/node-jq -r '.deploy_url' deploy-output.json", returnStdout:true)
+//                 }
+//             }
+//         }
 
-            // post {
-            //     always {
-            //         publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'Staging E2E', reportTitles: '', useWrapperFileDirectly: true])
-            //     }
-            // }
-        }
+//          stage('Staging E2E') {
+//             agent {
+//                 docker {
+//                     image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
+//                     reuseNode true
+//                 }
+//             }
 
-        stage('Approval')
-        {
-            steps{
-                timeout(time: 15, unit: 'MINUTES') {
-                    input message: 'Do you wish to deploy to production?', ok: 'Yes, I am sure!'
-                }
-            }
-        }
+//             environment {
+//                 CI_ENVIRONMENT_URL = "${env.staging_url}"
+//             }
 
-        stage('Deploy prod') {
-            agent {
-                docker {
-                    image 'node:18-alpine'
-                    reuseNode true
-                }
-            }
-            steps {
-                sh '''
-                    npm install netlify-cli@20.1.1
-                    node_modules/.bin/netlify --version
-                    echo "Deploying to production. Site ID: $NETLIFY_SITE_ID"
-                    node_modules/.bin/netlify status
-                    node_modules/.bin/netlify deploy --dir=build --prod
-                '''
-            }
-        }
+//             steps {
+//                 sh '''
+//                     npx playwright test  --reporter=html
+//                 '''
+//             }
 
-        stage('Prod E2E') {
-            agent {
-                docker {
-                    image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
-                    reuseNode true
-                }
-            }
+//             // post {
+//             //     always {
+//             //         publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'Staging E2E', reportTitles: '', useWrapperFileDirectly: true])
+//             //     }
+//             // }
+//         }
 
-            environment {
-                CI_ENVIRONMENT_URL = 'https://fanciful-empanada-c7edc2.netlify.app/'
-            }
+//         stage('Approval')
+//         {
+//             steps{
+//                 timeout(time: 15, unit: 'MINUTES') {
+//                     input message: 'Do you wish to deploy to production?', ok: 'Yes, I am sure!'
+//                 }
+//             }
+//         }
 
-            steps {
-                sh '''
-                    npx playwright test  --reporter=html
-                '''
-            }
+//         stage('Deploy prod') {
+//             agent {
+//                 docker {
+//                     image 'node:18-alpine'
+//                     reuseNode true
+//                 }
+//             }
+//             steps {
+//                 sh '''
+//                     npm install netlify-cli@20.1.1
+//                     node_modules/.bin/netlify --version
+//                     echo "Deploying to production. Site ID: $NETLIFY_SITE_ID"
+//                     node_modules/.bin/netlify status
+//                     node_modules/.bin/netlify deploy --dir=build --prod
+//                 '''
+//             }
+//         }
 
-            // post {
-            //     always {
-            //         publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'Playwright E2E', reportTitles: '', useWrapperFileDirectly: true])
-            //     }
-            // }
-        }
+//         stage('Prod E2E') {
+//             agent {
+//                 docker {
+//                     image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
+//                     reuseNode true
+//                 }
+//             }
+
+//             environment {
+//                 CI_ENVIRONMENT_URL = 'https://fanciful-empanada-c7edc2.netlify.app/'
+//             }
+
+//             steps {
+//                 sh '''
+//                     npx playwright test  --reporter=html
+//                 '''
+//             }
+
+//             // post {
+//             //     always {
+//             //         publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'Playwright E2E', reportTitles: '', useWrapperFileDirectly: true])
+//             //     }
+//             // }
+//         }
     }
 }
 
