--- a/JenkinsFile
+++ b/JenkinsFile
@@ -52,31 +52,31 @@ pipeline {
             }
         }
 
-//                 stage('E2E') {
-//                     agent {
-//                         docker {
-//                             image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
-//                             reuseNode true
-//                         }
-//                     }
+                stage('E2E') {
+                    agent {
+                        docker {
+                            image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
+                            reuseNode true
+                        }
+                    }
 
-//                     steps {
-//                         sh '''
-//                             npm install serve
-//                             node_modules/.bin/serve -s build &
-//                             sleep 10
-//                             npx playwright test  --reporter=html
-//                         '''
-//                     }
+                    steps {
+                        sh '''
+                            npm install serve
+                            node_modules/.bin/serve -s build &
+                            sleep 10
+                            npx playwright test  --reporter=html
+                        '''
+                    }
 
-//                     // post {
-//                     //     always {
-//                     //         publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'Playwright Local', reportTitles: '', useWrapperFileDirectly: true])
-//                     //     }
-//                     // }
-//                 }
-//             }
-//         }
+                    post {
+                        always {
+                            publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'Playwright Local', reportTitles: '', useWrapperFileDirectly: true])
+                        }
+                    }
+                }
+            }
+        }
 
 //         stage('Deploy Staging') {
 //             agent {
