--- a/JenkinsFile
+++ b/JenkinsFile
@@ -136,7 +136,7 @@ pipeline {
             }
 
             environment {
-                CI_ENVIRONMENT_URL = "staging_url has to be set"
+                CI_ENVIRONMENT_URL = 'staging_url has to be set'
             }
 
             steps {
@@ -149,7 +149,7 @@ pipeline {
                     node_modules/.bin/netlify deploy --dir=build --json > deploy-output.json
                     node_modules/.bin/node-jq -r '.deploy_url' deploy-output.json
                     npx playwright test  --reporter=html
-                    CI_ENVIRONMENT_URL = "node_modules/.bin/node-jq -r '.deploy_url' deploy-output.json"
+                    CI_ENVIRONMENT_URL = $(node_modules/.bin/node-jq -r '.deploy_url' deploy-output.json)
                 '''
             }
 
