--- a/JenkinsFile
+++ b/JenkinsFile
@@ -220,9 +220,9 @@ pipeline {
                 }
             }
 
-    //         environment {
-    //             CI_ENVIRONMENT_URL = 'https://fanciful-empanada-c7edc2.netlify.app/'
-    //         }
+            environment {
+                CI_ENVIRONMENT_URL = 'https://fanciful-empanada-c7edc2.netlify.app/'
+            }
 
             steps {
                 sh '''
