added test stage

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -29,5 +29,23 @@ pipeline {
             }
         }
 
+         stage('Test')
+        {
+            agent{
+                docker{
+                    image 'node:18-alpine'
+                    reuseNode true
+                }
+            }
+
+            steps{
+                sh '''
+                    test stage
+                    test -f build/index.html
+                    npm test
+                '''
+            }
+        }
+
     }
 }
