added deploy stage

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,6 +1,9 @@
 pipeline {
     agent any
 
+    environment {
+        NETLIFY_SITE_ID = 'd2ef8043-1545-4690-88cf-32d3d29bb3d1'
+    }
     stages {
         stage('Hello') {
             steps {
@@ -60,6 +63,8 @@ pipeline {
                 sh '''
                    npm install netlify-cli
                    node_modules/.bin/netlify --version
+                   echo "deploy stage"
+                   echo "deploying to site id: $NETLIFY_SITE_ID"
                 '''
             }
         }
