added deploy stage

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -62,6 +62,7 @@ pipeline {
 
             steps{
                 sh '''
+                   echo 'minor change'
                    npm install netlify-cli@20.1.1
                    node_modules/.bin/netlify --version
                    echo "deploy stage"
