added deploy stage

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,6 +1,10 @@
 pipeline {
     agent any
 
+    environment {
+        NETLIFY_SITE_ID = '56c3bd51-d041-4e5c-a990-927c1e606697'
+    }
+
     stages {
         stage('Hello') {
             steps {
@@ -54,8 +58,9 @@ pipeline {
             }
             steps {
                 sh '''
-                npm install netlify-cli
+                npm install netlify-cli@20.1.1
                 node_modules/.bin/netlify --version
+                echo "deploying to site id: $NETLIFY_SITE_ID"
                 '''
             }
         }
