added docker file

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -15,7 +15,7 @@ pipeline {
                 sh 'docker build -t my-playwright .'
             }
         }
-        
+
         stage('Build') {
             agent {
                 docker {
@@ -71,7 +71,7 @@ pipeline {
             steps {
                 sh '''
                     npm install serve
-                    node_modules/.bin/serve -s build &
+                    node_modules/serve -s build &
                     sleep 10
                     npx playwright test  --reporter=html
                 '''
